@@ -1,178 +1,98 @@
 package BuddyConvo;
 
 import jakarta.servlet.annotation.WebServlet;
-import jakarta.servlet.http.HttpServlet;
-import jakarta.servlet.http.HttpServletRequest;
-import jakarta.servlet.http.HttpServletResponse;
-
-import java.io.IOException;
-import java.io.InputStream;
-import java.io.OutputStream;
-import java.net.HttpURLConnection;
-import java.net.URL;
+import jakarta.servlet.http.*;
+import java.io.*;
+import java.net.*;
 import java.nio.charset.StandardCharsets;
 
 @WebServlet("/voice")
 public class VoiceServlet extends HttpServlet {
 
-    private static final long serialVersionUID = 1L;
-
-    private static final String API_URL =
-            "https://api.elevenlabs.io/v1/text-to-speech/";
-
-    @Override
-    protected void doPost(HttpServletRequest request,
-                           HttpServletResponse response)
+    protected void doPost(HttpServletRequest req,HttpServletResponse res)
             throws IOException {
 
-        String apiKey = System.getenv("ELEVENLABS_API_KEY");
-        String voiceId = System.getenv("ELEVENLABS_VOICE_ID");
+        String key=System.getenv("ELEVENLABS_API_KEY");
+        String voice=System.getenv("ELEVENLABS_VOICE_ID");
 
-        if (apiKey == null || apiKey.trim().isEmpty()) {
-
-            response.sendError(
-                    HttpServletResponse.SC_INTERNAL_SERVER_ERROR,
-                    "ELEVENLABS_API_KEY is missing in Render."
-            );
-
+        if(key==null||key.isBlank()){
+            res.sendError(500,"ELEVENLABS_API_KEY missing");
             return;
         }
 
-        if (voiceId == null || voiceId.trim().isEmpty()) {
-
-            response.sendError(
-                    HttpServletResponse.SC_INTERNAL_SERVER_ERROR,
-                    "ELEVENLABS_VOICE_ID is missing in Render."
-            );
-
+        if(voice==null||voice.isBlank()){
+            res.sendError(500,"ELEVENLABS_VOICE_ID missing");
             return;
         }
 
-        String text = request.getParameter("text");
+        String text=req.getParameter("text");
 
-        if (text == null || text.trim().isEmpty()) {
-
-            response.sendError(
-                    HttpServletResponse.SC_BAD_REQUEST,
-                    "Please enter a message."
-            );
-
+        if(text==null||text.isBlank()){
+            res.sendError(400,"Text is empty");
             return;
         }
 
-        text = text.trim();
+        String json="{\"text\":\""+
+                text.replace("\\","\\\\")
+                    .replace("\"","\\\"")
+                    .replace("\n","\\n")
+                    .replace("\r","")+
+                "\",\"model_id\":\"eleven_multilingual_v2\"}";
 
-        if (text.length() > 1000) {
+        URL url=new URL(
+            "https://api.elevenlabs.io/v1/text-to-speech/"
+            +voice+"?output_format=mp3_44100_128"
+        );
 
-            response.sendError(
-                    HttpServletResponse.SC_BAD_REQUEST,
-                    "Message is too long."
-            );
+        HttpURLConnection c=(HttpURLConnection)url.openConnection();
 
-            return;
+        c.setRequestMethod("POST");
+        c.setDoOutput(true);
+        c.setConnectTimeout(15000);
+        c.setReadTimeout(60000);
+
+        c.setRequestProperty("xi-api-key",key);
+        c.setRequestProperty("Content-Type","application/json");
+        c.setRequestProperty("Accept","audio/mpeg");
+
+        try(OutputStream o=c.getOutputStream()){
+            o.write(json.getBytes(StandardCharsets.UTF_8));
         }
 
-        String safeText = text
-                .replace("\\", "\\\\")
-                .replace("\"", "\\\"")
-                .replace("\r", "")
-                .replace("\n", "\\n");
+        int code=c.getResponseCode();
 
-        String json =
-                "{"
-                + "\"text\":\"" + safeText + "\","
-                + "\"model_id\":\"eleven_multilingual_v2\""
-                + "}";
+        if(code>=200&&code<300){
 
-        URL url = new URL(
-                API_URL + voiceId
-                + "?output_format=mp3_44100_128"
-        );
+            res.setContentType("audio/mpeg");
 
-        HttpURLConnection connection =
-                (HttpURLConnection) url.openConnection();
+            try(InputStream in=c.getInputStream();
+                OutputStream out=res.getOutputStream()){
 
-        connection.setRequestMethod("POST");
-        connection.setDoOutput(true);
-        connection.setConnectTimeout(15000);
-        connection.setReadTimeout(60000);
+                byte[] b=new byte[8192];
+                int n;
 
-        connection.setRequestProperty(
-                "xi-api-key",
-                apiKey
-        );
-
-        connection.setRequestProperty(
-                "Content-Type",
-                "application/json"
-        );
-
-        connection.setRequestProperty(
-                "Accept",
-                "audio/mpeg"
-        );
-
-        try (OutputStream output =
-                     connection.getOutputStream()) {
-
-            output.write(
-                    json.getBytes(StandardCharsets.UTF_8)
-            );
-        }
-
-        int status = connection.getResponseCode();
-
-        if (status >= 200 && status < 300) {
-
-            response.setContentType("audio/mpeg");
-            response.setHeader(
-                    "Cache-Control",
-                    "no-cache"
-            );
-
-            try (InputStream input =
-                         connection.getInputStream();
-                 OutputStream output =
-                         response.getOutputStream()) {
-
-                byte[] buffer = new byte[8192];
-
-                int bytes;
-
-                while ((bytes = input.read(buffer)) != -1) {
-
-                    output.write(buffer, 0, bytes);
-                }
-
-                output.flush();
+                while((n=in.read(b))!=-1)
+                    out.write(b,0,n);
             }
 
-        } else {
+        }else{
 
-            InputStream errorStream =
-                    connection.getErrorStream();
+            InputStream e=c.getErrorStream();
 
-            String errorMessage = "";
+            String msg=e==null?"No error returned":
+                new String(e.readAllBytes(),StandardCharsets.UTF_8);
 
-            if (errorStream != null) {
-
-                errorMessage = new String(
-                        errorStream.readAllBytes(),
-                        StandardCharsets.UTF_8
-                );
-            }
             System.out.println(
-                    "ELEVENLABS ERROR "
-                    + status
-                    + ": "
-                    + errorMessage
+                "ELEVENLABS ERROR "+code+": "+msg
             );
 
-            response.sendError(
-                    status,
-                    "ElevenLabs error: " + errorMessage
+            res.setStatus(code);
+            res.setContentType("text/plain");
+            res.getWriter().write(
+                "ElevenLabs error "+code+": "+msg
             );
         }
-        connection.disconnect();
+
+        c.disconnect();
     }
 }
